hphp/hack/test/typecheck/tconst/cannot_override_tconst.php
<?hh // strict

class Parent {
  protected type const ID = arraykey;
}

class Child extends Parent {
  protected type const ID = int;
}
